--- a/NumAndDrive/Views/Admin/Details.cshtml
+++ b/NumAndDrive/Views/Admin/Details.cshtml
@@ -6,21 +6,6 @@
 
 <h2 class="m-5">Détails de l'utilisateur</h2>
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>Nom</th>
-            <th>Prénom</th>
-            <th>Adresse mail</th>
-            <th>Numéro de téléphone</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td>@Model.LastName</td>
-            <td>@Model.FirstName</td>
-            <td>@Model.Email</td>
-            <td>@Model.PhoneNumber</td>
-        </tr>
-    </tbody>
-</table>
+@{
+    await Html.RenderPartialAsync("~/Views/Admin/_usersTable.cshtml", new List<User>() { Model });
+}
