--- a/NumAndDrive/Views/Admin/_usersTable.cshtml
+++ b/NumAndDrive/Views/Admin/_usersTable.cshtml
@@ -1,8 +1,10 @@
 ﻿@using NumAndDrive.Models
 @model List<User>
 
-<table class="table table-striped">
-    <thead>
+@if (Model != null && Model.Any())
+{
+    <table class="table table-striped">
+        <thead>
         <tr>
             <th>Nom</th>
             <th>Prénom</th>
@@ -12,8 +14,8 @@
             <th></th>
             <th></th>
         </tr>
-    </thead>
-    <tbody>
+        </thead>
+        <tbody>
         @foreach (var user in Model)
         {
             <tr>
@@ -26,5 +28,10 @@
                 <td><a asp-controller="admin" asp-action="archive" asp-route-id="@user.Id"><img src="../img/icon-delete.png" alt="Archiver" height="30" /></a></td>
             </tr>
         }
-    </tbody>
-</table>
+        </tbody>
+    </table>
+}
+else
+{
+    <p>Aucun utilisateur-rice à afficher</p>
+}
