--- a/NumAndDrive/Views/Journey/GetJourneys.cshtml
+++ b/NumAndDrive/Views/Journey/GetJourneys.cshtml
@@ -44,7 +44,7 @@
                                     <p class="m-0">@journey.AddressDeparting.City > @journey.AddressIncoming.City</p>
                                 </div>
                                 <div class="row">
-                                    <p class="m-0">@journey.DepartureHour > @journey.DepartureHour</p>
+                                    <p class="m-0">à @journey.DepartureHour</p>
                                 </div>
                             </div>
                             <div class="col-2 d-flex align-items-center">
