--- a/NumAndDrive/Views/Journey/Add.cshtml
+++ b/NumAndDrive/Views/Journey/Add.cshtml
@@ -2,14 +2,14 @@
 @model JourneyCompanyViewModel
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <h2 class="text-center mb-4">Quel trajet proposez-vous ?</h2>
+<h2 class="text-center mb-4">Quel trajet proposez-vous ?</h2>
 
 <div class="container">
-    <div class="row border border-dark rounded p-5">
+    <div class="row p-4 ms-5 h-100 border border-gray rounded custom-bottom-shadow overflow-auto">
         <form method="post" asp-controller="journey" asp-action="Add">
             <div class="text-danger" asp-validation-summary="All"></div>
             <div class="row justify-content-center mb-4">
-                <div class="col-4">
+                <div class="col-4 position-relative">
                     <h4 class="text-center">D'où partons nous ?</h4>
                     <input type="text" asp-for="AddressToTrim" id="search" placeholder="Entrez une adresse" class="form-control" />
                     <ul id="suggestions" class="list-group"></ul>
@@ -52,14 +52,25 @@
                     <input type="submit" class="btn custom-color-orange text-white custom-bottom-shadow" value="Créer" />
                 </div>
             </div>
-
         </form>
     </div>
 </div>
-    
-    
 
-<script>$(document).ready(function () {
+<style>
+    #suggestions {
+        position: absolute;
+        z-index: 1000;
+        max-height: 200px;
+        overflow-y: auto;
+        width: 100%;
+    }
+    .position-relative {
+        position: relative;
+    }
+</style>
+
+<script>
+    $(document).ready(function () {
         $('#search').on('input', function () {
             var query = $(this).val();
             if (query.length > 2) {
@@ -80,4 +91,5 @@
             $('#search').val($(this).text());
             $('#suggestions').empty();
         });
-    });</script>
+    });
+</script>
